[package]
name = "one-united"
version = "0.1.0"
edition = "2021"
authors = ["JmPotato <ghzpotato@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.13.0"
console_error_panic_hook = { version = "0.1.1" }
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
http = "1.1"
lazy_static = "1.5"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
url = "2.5"
worker = { version = "0.5.0", features = ['http'] }
worker-kv = "0.7"
worker-macros = { version = "0.5.0", features = ['http'] }
